// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H5PEditor alterLibrarySemantics does not mutate semantics and alters the correct values (H5P.Blanks) 1`] = `
[
  {
    "default": "default",
    "name": "notmodified",
    "type": "group",
  },
  {
    "description": "These options will let you control how the task behaves.",
    "fields": [
      {
        "default": false,
        "name": "caseSensitive",
        "type": "boolean",
      },
    ],
    "importance": "low",
    "label": "Behavioural settings",
    "name": "behaviour",
    "optional": true,
    "type": "group",
  },
  {
    "importance": "medium",
    "label": "Summary Solution",
    "name": "summarySolution",
    "optional": true,
    "tags": [
      "math",
      "maction",
      "annotation",
      "annotation-xml",
      "menclose",
      "merror",
      "mfenced",
      "mfrac",
      "mi",
      "mmultiscripts",
      "mn",
      "mo",
      "mover",
      "mpadded",
      "mphantom",
      "mprescripts",
      "mroot",
      "mrow",
      "ms",
      "semantics",
      "mspace",
      "msqrt",
      "mstyle",
      "msub",
      "msup",
      "msubsup",
      "mtable",
      "mtd",
      "mtext",
      "mtr",
      "munder",
      "munderover",
      "math",
      "mi",
      "mn",
      "mo",
      "ms",
      "mspace",
      "mtext",
      "menclose",
      "merror",
      "mfenced",
      "mfrac",
      "mpadded",
      "mphantom",
      "mroot",
      "mrow",
      "msqrt",
      "mstyle",
      "mmultiscripts",
      "mover",
      "mprescripts",
      "msub",
      "msubsup",
      "msup",
      "munder",
      "munderover",
      "mtable",
      "mtd",
      "mtr",
      "maction",
      "annotation",
      "annotation-xml",
      "semantics",
      "a",
      "b",
      "blockquote",
      "br",
      "caption",
      "code",
      "div",
      "em",
      "figcaption",
      "figure",
      "h1",
      "h5",
      "i",
      "iframe",
      "img",
      "li",
      "ol",
      "p",
      "pre",
      "small",
      "span",
      "strong",
      "style",
      "sub",
      "sup",
      "table",
      "td",
      "th",
      "u",
      "ul",
      "html",
    ],
    "type": "text",
    "widget": "html",
  },
  {
    "importance": "medium",
    "label": "Detailed Solution",
    "name": "detailedSolution",
    "optional": true,
    "tags": [
      "math",
      "maction",
      "annotation",
      "annotation-xml",
      "menclose",
      "merror",
      "mfenced",
      "mfrac",
      "mi",
      "mmultiscripts",
      "mn",
      "mo",
      "mover",
      "mpadded",
      "mphantom",
      "mprescripts",
      "mroot",
      "mrow",
      "ms",
      "semantics",
      "mspace",
      "msqrt",
      "mstyle",
      "msub",
      "msup",
      "msubsup",
      "mtable",
      "mtd",
      "mtext",
      "mtr",
      "munder",
      "munderover",
      "math",
      "mi",
      "mn",
      "mo",
      "ms",
      "mspace",
      "mtext",
      "menclose",
      "merror",
      "mfenced",
      "mfrac",
      "mpadded",
      "mphantom",
      "mroot",
      "mrow",
      "msqrt",
      "mstyle",
      "mmultiscripts",
      "mover",
      "mprescripts",
      "msub",
      "msubsup",
      "msup",
      "munder",
      "munderover",
      "mtable",
      "mtd",
      "mtr",
      "maction",
      "annotation",
      "annotation-xml",
      "semantics",
      "a",
      "b",
      "blockquote",
      "br",
      "caption",
      "code",
      "div",
      "em",
      "figcaption",
      "figure",
      "h1",
      "h5",
      "i",
      "iframe",
      "img",
      "li",
      "ol",
      "p",
      "pre",
      "small",
      "span",
      "strong",
      "style",
      "sub",
      "sup",
      "table",
      "td",
      "th",
      "u",
      "ul",
      "html",
    ],
    "type": "text",
    "widget": "html",
  },
]
`;

exports[`H5PEditor alterLibrarySemantics does not mutate semantics and alters the correct values (H5P.MultiChoice) 1`] = `
[
  {
    "default": "default",
    "name": "notmodified",
    "type": "group",
  },
  {
    "description": "These options will let you control how the task behaves.",
    "fields": [
      {
        "default": false,
        "name": "randomAnswers",
        "type": "text",
      },
    ],
    "importance": "low",
    "label": "Behavioural settings",
    "name": "behaviour",
    "optional": true,
    "type": "group",
  },
  {
    "importance": "medium",
    "label": "Summary Solution",
    "name": "summarySolution",
    "optional": true,
    "tags": [
      "math",
      "maction",
      "annotation",
      "annotation-xml",
      "menclose",
      "merror",
      "mfenced",
      "mfrac",
      "mi",
      "mmultiscripts",
      "mn",
      "mo",
      "mover",
      "mpadded",
      "mphantom",
      "mprescripts",
      "mroot",
      "mrow",
      "ms",
      "semantics",
      "mspace",
      "msqrt",
      "mstyle",
      "msub",
      "msup",
      "msubsup",
      "mtable",
      "mtd",
      "mtext",
      "mtr",
      "munder",
      "munderover",
      "math",
      "mi",
      "mn",
      "mo",
      "ms",
      "mspace",
      "mtext",
      "menclose",
      "merror",
      "mfenced",
      "mfrac",
      "mpadded",
      "mphantom",
      "mroot",
      "mrow",
      "msqrt",
      "mstyle",
      "mmultiscripts",
      "mover",
      "mprescripts",
      "msub",
      "msubsup",
      "msup",
      "munder",
      "munderover",
      "mtable",
      "mtd",
      "mtr",
      "maction",
      "annotation",
      "annotation-xml",
      "semantics",
      "a",
      "b",
      "blockquote",
      "br",
      "caption",
      "code",
      "div",
      "em",
      "figcaption",
      "figure",
      "h1",
      "h5",
      "i",
      "iframe",
      "img",
      "li",
      "ol",
      "p",
      "pre",
      "small",
      "span",
      "strong",
      "style",
      "sub",
      "sup",
      "table",
      "td",
      "th",
      "u",
      "ul",
      "html",
    ],
    "type": "text",
    "widget": "html",
  },
  {
    "importance": "medium",
    "label": "Detailed Solution",
    "name": "detailedSolution",
    "optional": true,
    "tags": [
      "math",
      "maction",
      "annotation",
      "annotation-xml",
      "menclose",
      "merror",
      "mfenced",
      "mfrac",
      "mi",
      "mmultiscripts",
      "mn",
      "mo",
      "mover",
      "mpadded",
      "mphantom",
      "mprescripts",
      "mroot",
      "mrow",
      "ms",
      "semantics",
      "mspace",
      "msqrt",
      "mstyle",
      "msub",
      "msup",
      "msubsup",
      "mtable",
      "mtd",
      "mtext",
      "mtr",
      "munder",
      "munderover",
      "math",
      "mi",
      "mn",
      "mo",
      "ms",
      "mspace",
      "mtext",
      "menclose",
      "merror",
      "mfenced",
      "mfrac",
      "mpadded",
      "mphantom",
      "mroot",
      "mrow",
      "msqrt",
      "mstyle",
      "mmultiscripts",
      "mover",
      "mprescripts",
      "msub",
      "msubsup",
      "msup",
      "munder",
      "munderover",
      "mtable",
      "mtd",
      "mtr",
      "maction",
      "annotation",
      "annotation-xml",
      "semantics",
      "a",
      "b",
      "blockquote",
      "br",
      "caption",
      "code",
      "div",
      "em",
      "figcaption",
      "figure",
      "h1",
      "h5",
      "i",
      "iframe",
      "img",
      "li",
      "ol",
      "p",
      "pre",
      "small",
      "span",
      "strong",
      "style",
      "sub",
      "sup",
      "table",
      "td",
      "th",
      "u",
      "ul",
      "html",
    ],
    "type": "text",
    "widget": "html",
  },
]
`;

exports[`H5PEditor alterLibrarySemantics does not mutate semantics and alters the correct values (H5P.QuestionSet) 1`] = `
[
  {
    "default": "default",
    "name": "notmodified",
    "type": "group",
  },
  {
    "field": {
      "name": "question",
      "options": [
        "H5P.MultiChoice 1.16",
      ],
      "type": "library",
    },
    "name": "questions",
    "type": "text",
  },
  {
    "default": false,
    "name": "randomQuestions",
    "type": "boolean",
  },
]
`;
